Add IntelliJ, Gradle files, OS files, ...
...and an exception for the gradle-wrapper jar to .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,20 @@ local.properties
 
 # TeXlipse plugin
 .texlipse
+
+build/
+/bin/
+*.iml
+.idea/
+
+!gradle/wrapper/gradle-wrapper.jar
+
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.AppleDouble
+.LSOverride
+.Trashes
+ehthumbs.db
+Thumbs.db
