Set on_start to never

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,6 @@ notifications:
   webhooks:
     urls:
       - https://webhooks.gitter.im/e/09f40f14885470ecffd1
-    on_start: always
+    on_start: never
     on_failure: always
     on_success: change
