--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
 	}
   }
   dependencies {
-    classpath group: 'jaci.openrio.gradle', name: 'GradleRIO', version: '+'
+	  classpath 'jaci.openrio.gradle:GradleRIO:4.3.3'
     classpath 'org.codehaus.groovy.modules.http-builder:http-builder:0.5.2'
     classpath 'commons-io:commons-io:2.4'
     classpath 'org.ajoberstar:grgit:1.4.1'
@@ -94,15 +94,11 @@ def getAuthor() {
 }
 
 
-
-
-
 import groovy.json.JsonSlurper
+import groovyx.net.http.ContentType
 import groovyx.net.http.HTTPBuilder
-import groovyx.net.http.EncoderRegistry
-import groovyx.net.http.Method;
-import groovyx.net.http.ContentType;
-import org.apache.commons.io.FilenameUtils;
+import groovyx.net.http.Method
+import org.apache.commons.io.FilenameUtils
 
 String[] getVersionsFromBintray() {
 	def http = new HTTPBuilder("https://bintray.com/api/v1/packages/frc-1294/Robot-Code/frc2016")
