--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,12 @@ sudo: false
 language: java
 jdk: oraclejdk8
 install: true
+before_cache:
+  - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
+cache:
+  directories:
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
 script: ./gradlew build
 before_deploy: ./gradlew generatePomFileForMyPublicationPublication generateBintrayFile
 deploy:
