--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ jdk: oraclejdk8
 install: true
 before_cache:
   - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -f $HOME/.gradle/cahces/2.11/plugin-resolution/cache.properties.lock
 cache:
   directories:
     - $HOME/.gradle/caches/
