--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ install: true
 before_cache:
   - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
   - rm -f $HOME/.gradle/caches/2.11/plugin-resolution/cache.properties.lock
+  - rm -f $HOME/.gradle/caches/2.11/plugin-resolution/cache.properties
+  
 cache:
   directories:
     - $HOME/.gradle/caches/
